# PyQWindowKit

./: CMakeLists.txt  CMakeSettings.json  README.md  README_zh_CN.md  pyproject.toml  setup_venv.ps1  test_core.py  test_quick.py  test_widgets.py  verify_build.py
bindings/: bindings_core.h  bindings_core.xml  bindings_quick.h  bindings_quick.xml  bindings_widgets.h  bindings_widgets.xml
doc/cache/: aaa.txt  bbb.txt  bindings.xml  ccc.txt  ddd.txt  eee.txt  gen_pyi.py  origin.txt  pyigen.py
gallery/: framelessdialog.py  framelesshelper.py  framelesswindow.py  main.py  resources_rc.py
gallery/resources/: resource.qrc
gallery/resources/qss/: dark-style.qss  light-style.qss
gallery/widgetframe/: __init__.py  windowbar.py  windowbutton.py
scripts/: CreateBinding.cmake  generate_init.py  get_generated_sources.py
